# cpp-classroom-2526-sem02-control03-solving

./: CMakeLists.txt  README.adoc
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/task_1/: extension.hpp  smoke.cpp
src/task_2/: curry.hpp  ncomp_functions.cpp  ncomp_functors.cpp  smoke.cpp
